--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.rongzer</groupId>
-    <artifactId>drools</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.jettian</groupId>
+    <artifactId>calculateflow</artifactId>
+    <version>0.0.1-release</version>
     <packaging>jar</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
